--- a/style.css
+++ b/style.css
@@ -21,6 +21,17 @@ section#main {
 	background-color: #fff;
 }
 
+section#main div {
+	display: none;
+	position: fixed;
+	width: 6.25%;
+}
+
+section#main img {
+	display: block;
+	width: 100%;
+}
+
 section#local {
 	float: right;
 	width: 25%;
@@ -28,22 +39,21 @@ section#local {
 	background-color: #f6f8f8;
 }
 
-section#pallette {
+section#palette {
 	float: left;
 	width: 100%;
 	height: 7.5em;
 	background-color: #ecf0f1;
 }
 
-section#pallette div {
+section#palette div {
 	display: inline-block;
 	width: 10%;
 	height: calc(100% - 1em);
 	margin: 0.5em 3.33%;
+	background-size: auto 100%;
+	background-position: center;
+	background-repeat: no-repeat;
 	text-align: center;
 	cursor: pointer;
-}
-
-section#pallette div img {
-	height: 100%;
 }
