--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ section#local {
 	width: 25%;
 	height: calc(100% - 7.5em);
 	background-color: #f6f8f8;
+	z-index: 101;
 }
 
 section#palette {
@@ -56,4 +57,5 @@ section#palette div {
 	background-repeat: no-repeat;
 	text-align: center;
 	cursor: pointer;
+	z-index: 100;
 }
