--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ section#main div.stack {
 section#main div.spacer {
 	display: inline-block;
 	width: 2%;
+	height: 100%;
 }
 
 section#main div.stack img {
